--- a/PruebaProyecto/src/styles/estiloPrueba.css
+++ b/PruebaProyecto/src/styles/estiloPrueba.css
@@ -18,7 +18,7 @@ and open the template in the editor.
     -fx-background-image: url(../images/fondo.jpg);
 }
 
-#botonInicio,#registrate {
+ #botonInicio, #botonCrear, #botonMapa, #botonMiPerfil, #registrate , #iniciarSesion{
 	-fx-box-shadow: 0px 10px 14px -7px #276873;
 	-fx-background-color:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	-fx-background-color:#599bb3;
@@ -27,12 +27,21 @@ and open the template in the editor.
 	-fx-font-size:16px;
 	-fx-font-weight:bold;
         -fx-opacity: 100%;
+        -fx-outer-border: lightblue;
 }
-button:hover {
+#registrate:hover , #iniciarSesion:hover {
 	-fx-background-color:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	-fx-background-color:#408c99;
 }
 
 #textInvitado:hover{
     -fx-text-fill: turquoise;
+}
+
+#fondoInicio{
+    -fx-background-image: url(../images/fondoRetiro.jpg);
+}
+
+#panelBotones button{
+    -fx-border-color: cyan;
 }
